# chat-app-plus

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
chatappplus/: docker-entrypoint.sh  manage.py
chatappplus/chat/: admin.py  consumers.py  models.py  permissions.py  serializers.py  urls.py  views.py  viewsets.py
chatappplus/chatappplus/: asgi.py  channelsmiddleware.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
